modified plugin install script to allow installation to the dist directory (ie something that will travel with the conda package

--- a/meta.yaml
+++ b/meta.yaml
@@ -110,6 +110,7 @@ requirements:
   # listed explicitly if they are required.
   build:
     - python
+    - python-microscopy
 
   # Packages required to run the package. These are the dependencies that
   # will be installed automatically whenever the package is installed.
