removing invalid equals sign

--- a/meta.yaml
+++ b/meta.yaml
@@ -116,7 +116,7 @@ requirements:
   # Package names should be any valid conda spec (see "Specifying versions
   # in requirements" below).
   run:
-    - python=2.7
+    - python 2.7
     - python-microscopy
 
 
