--- a/meta.yaml
+++ b/meta.yaml
@@ -1,6 +1,6 @@
 package:
   name: nep-fitting       # lower case name of package, may contain '-' but no spaces
-  version: "1.8"    # version of package. Should use the PEP-386 verlib
+  version: "1.9"    # version of package. Should use the PEP-386 verlib
                       # conventions. Note that YAML will interpret
                       # versions like 1.0 as floats, meaning that 1.0 will
                       # be the same as 1. To avoid this, always put the
@@ -14,7 +14,7 @@ source:
 
 build:
   # The build number should be incremented for new builds of the same version
-  number: 0       # (defaults to 0)
+  number: 2       # (defaults to 0)
   #string: abc     # (defaults to default conda build string plus the build
                   # number)
                   # The build string cannot contain a dash '-' character
@@ -119,10 +119,11 @@ requirements:
   run:
     - python
     - python-microscopy >=17.10.24
+    - scikit-image >=0.14.2  # TODO - remove once scikit-image is pinned appropriately in PYME
 
 
 
 about:
   home: http://www.python-microscopy.org
   license: GPL
-  summary: Tools for extracting STED PSF widths from image data
+  summary: Tools for extracting PSF widths from image data
